--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
   </head>
 
   <body>
-    Hello World!
+    <div id="page-wrapper">
+      <header id="header">
+        <div class="logo">
+          <img id="header-image" src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/092020/traxxas_logo.png?NOHfx_otBdcaFK3yQL1nbk7KKJZzuA0t&itok=o53zdGzc" alt="Traxxas logo">
+        </div>
+
+        <nav id="nav-bar">
+          <ul>
+            <li><a class="nav-link" href="#vehicle-type">Vehicle Type</a></li>
+            <li><a class="nav-link" href="#Models">Models</a></li>
+            <li><a class="nav-link" href="#Prices">Prices</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="container"></div>
+
+      <section id="hero">
+        <h2>The Fastest Name In Radio Control</h2>
+        <form id="form" action="">
+          <input 
+          name="email"
+          id="email"
+          type="email"
+          placeholder="Enter your email address"
+          required
+          />
+          <input id="submit" type="submit" value="Get Started" class="btn">
+
+        </form>
+      </section>
+
+    </div>
   </body>
 </html>
