--- a/index.html
+++ b/index.html
@@ -37,7 +37,94 @@
 
         </form>
       </section>
-
+      <div class="container">
+        <section id="Accesories">
+          <div class="grid">
+            <div class="icon">
+              <i class="fa fa-3x fa-fire"></i></div>
+            <div class="desc">
+              <h2>Chargers</h2>
+              <p>
+                Choose your favorite. All our chargers are excelent quality!
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <i class="fa fa-3x fa-truck"></i></div>
+            <div class="desc">
+              <h2>LiPo Bateries</h2>
+              <p>
+                With our LiPo Bateries you never worry abuot you getting stuck.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            </div>
+            <div class="desc">
+              <h2>NiMH Bateries</h2>
+              <p>
+                Our NiMH Bateries leave you have hours and hours in the road.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section id="how-it-works">
+          <iframe
+            id="video-traxxas"
+            height="500"
+            src="https://www.youtube.com/watch?list=PL69CD30B32768C1FF&time_continue=2&v=OrXG9ndTlAY&embeds_euri=https%3A%2F%2Ftraxxas.com%2F&feature=emb_logo"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <section id="pricing">
+          <div class="product" id="tenor">
+            <div class="level">Tenor Trombone</div>
+            <h2>$600</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$900</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="valve">
+            <div class="level">Valve Trombone</div>
+            <h2>$1200</h2>
+            <ol>
+              <li>Plays similar to a Trumpet</li>
+              <li>Great for Jazz Bands</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+        </section>
+        <footer>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span>Copyright 2016, Original Trombones</span>
+        </footer>
+      </div>
+    <div>
     </div>
   </body>
 </html>
