--- a/index.html
+++ b/index.html
@@ -72,56 +72,17 @@
           </div>
         </section>
         <section id="how-it-works">
-          <iframe
-            id="video-traxxas"
-            height="500"
-            src="https://www.youtube.com/watch?list=PL69CD30B32768C1FF&time_continue=2&v=OrXG9ndTlAY&embeds_euri=https%3A%2F%2Ftraxxas.com%2F&feature=emb_logo"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+          <iframe width="500" height="350" src="https://www.youtube.com/embed/wjsW15J2O5U" title="@FOXFACTORY Slash VXL Desert Run | @Traxxas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
         <section id="pricing">
           <div class="product" id="tenor">
-            <div class="level">Tenor Trombone</div>
-            <h2>$600</h2>
-            <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
-            </ol>
-            <button class="btn">Select</button>
-          </div>
-          <div class="product" id="bass">
-            <div class="level">Bass Trombone</div>
-            <h2>$900</h2>
-            <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
-            </ol>
-            <button class="btn">Select</button>
-          </div>
-          <div class="product" id="valve">
-            <div class="level">Valve Trombone</div>
-            <h2>$1200</h2>
-            <ol>
-              <li>Plays similar to a Trumpet</li>
-              <li>Great for Jazz Bands</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
-            </ol>
-            <button class="btn">Select</button>
-          </div>
-        </section>
-        <footer>
-          <ul>
+            <div class="level">Traxxas Slash</div>
+         
             <li><a href="#">Privacy</a></li>
             <li><a href="#">Terms</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <span>Copyright 2016, Original Trombones</span>
+          <span>Copyright 2023, Traxxas, RC Trucks</span>
         </footer>
       </div>
     <div>
